hw-cbmc/src/vhdl/y.output
Terminals unused in grammar

   "ABS"
   "ALIAS"
   "ASSERT"
   "ATTRIBUTE"
   "BLOCK"
   "BUFFER"
   "BUS"
   "CONFIGURATION"
   "DISCONNENT"
   "FUNCTION"
   "GROUP"
   "GUARDED"
   "IMPURE"
   "INERTIAL"
   "INOUT"
   "LABEL"
   "LINKAGE"
   "LITERAL"
   "NAND"
   "NEW"
   "NEXT"
   "NOR"
   "ON"
   "OPEN"
   "POSTPONED"
   "PROCEDURE"
   "PURE"
   "REGISTER"
   "REJECT"
   "REM"
   "REPORT"
   "RETURN"
   "ROL"
   "ROR"
   "SEVERITY"
   "SLA"
   "SLL"
   "SRA"
   "SRL"
   "SUBTYPE"
   "TRANSPORT"
   "UNAFFECTED"
   "UNITS"
   "UNTIL"
   "WAIT"
   "WHILE"
   "XNOR"


Grammar

    0 $accept: design_file $end

    1 design_file: %empty
    2            | design_file design_unit

    3 design_unit: context_clause library_unit
    4            | library_unit

    5 context_clause: context_item
    6               | context_clause context_item

    7 context_item: library_clause
    8             | use_clause

    9 use_clause: "USE" name_list ';'

   10 name_list: name
   11          | name_list ',' name

   12 name: TOK_IDENTIFIER
   13     | selected_name

   14 selected_name: name '.' TOK_IDENTIFIER
   15              | name '.' "ALL"

   16 library_clause: "LIBRARY" name_list ';'

   17 library_unit: primary_unit
   18             | secondary_unit

   19 primary_unit: entity_declaration
   20             | package_declaration

   21 package_declaration: "PACKAGE" name "IS" package_declarative_part "END" ';'

   22 package_declarative_part: %empty

   23 secondary_unit: architecture
   24               | package

   25 package: "PACKAGE" "BODY" name "IS" package_body_declarative_part "END" ';'

   26 package_body_declarative_part: %empty

   27 entity_declaration: "ENTITY" name "IS" "PORT" '(' port_list ')' ';' "END" name_opt ';'
   28                   | "ENTITY" name "IS" "GENERIC" '(' generic_list ')' ';' "PORT" '(' port_list ')' ';' "END" name_opt ';'

   29 generic_list: generic
   30             | generic_list ';' generic

   31 generic: s_list ':' type ':' '=' expr
   32        | s_list ':' type

   33 port_list: port
   34          | port_list ';' port

   35 port: s_list ':' dir type

   36 dir: "IN"
   37    | "OUT"

   38 type: name '(' expr updown expr ')'
   39     | name '(' expr ')'
   40     | name '(' name '\'' "RANGE" ')'
   41     | name '(' name '\'' TOK_IDENTIFIER ')'
   42     | name
   43     | '(' enumeration_literal_list ')'
   44     | "RANGE" expr updown expr
   45     | "ARRAY" '(' index_constraint_list ')' "OF" type
   46     | "RECORD" element_declaration_list "END" "RECORD" name_opt
   47     | "ACCESS" type
   48     | "TYPE" TOK_IDENTIFIER
   49     | "FILE" "OF" type
   50     | "PROTECTED" "END" "PROTECTED"

   51 element_declaration_list: element_declaration
   52                         | element_declaration_list element_declaration

   53 element_declaration: identifier_list ':' type ';'

   54 identifier_list: TOK_IDENTIFIER
   55                | identifier_list TOK_IDENTIFIER

   56 index_constraint_list: index_constraint
   57                      | index_constraint_list ',' index_constraint

   58 index_constraint: name
   59                 | name '(' name '\'' "RANGE" ')'
   60                 | expr updown expr

   61 enumeration_literal_list: enumeration_literal
   62                         | enumeration_literal_list ',' enumeration_literal

   63 enumeration_literal: TOK_IDENTIFIER
   64                    | TOK_CHAR

   65 updown: "DOWNTO"
   66       | "TO"

   67 architecture: "ARCHITECTURE" name "OF" name "IS" architecture_decl_list "BEGIN" architecture_body "END" name_opt ';'

   68 architecture_decl_list: %empty
   69                       | architecture_decl_list architecture_decl

   70 architecture_decl: "SIGNAL" s_list ':' type ';'
   71                  | "CONSTANT" name ':' type ':' '=' expr ';'
   72                  | "TYPE" name "IS" '(' s_list ')' ';'
   73                  | "COMPONENT" name "PORT" '(' port_list ')' ';' "END" "COMPONENT" ';'
   74                  | "COMPONENT" name "GENERIC" '(' generic_list ')' ';' "PORT" '(' port_list ')' ';' "END" "COMPONENT" ';'

   75 s_list: name
   76       | s_list ',' name

   77 architecture_body: %empty
   78                  | architecture_body architecture_item

   79 architecture_item: signal '<' '=' sigvalue
   80                  | "WITH" expr "SELECT" signal '<' '=' with_list ';'
   81                  | name ':' name "PORT" "MAP" '(' map_list ')' ';'
   82                  | name ':' name "GENERIC" "MAP" '(' generic_map_list ')' "PORT" "MAP" '(' map_list ')' ';'
   83                  | label_opt "PROCESS" '(' signal_list ')' process_decl_list "BEGIN" process_body "END" "PROCESS" name_opt ';'
   84                  | label_opt "IF" conditional_expr "GENERATE" architecture_body "END" "GENERATE" name_opt ';'
   85                  | label_opt "FOR" signal "IN" expr "TO" expr "GENERATE" architecture_body "END" "GENERATE" name_opt ';'
   86                  | label_opt "FOR" signal "IN" expr "DOWNTO" expr "GENERATE" architecture_body "END" "GENERATE" name_opt ';'

   87 name_opt: %empty
   88         | name

   89 label_opt: %empty
   90          | name ':'

   91 with_list: with_item_list
   92          | with_item_list ',' expr delay_opt "WHEN" "OTHERS"
   93          | expr delay_opt "WHEN" "OTHERS"

   94 with_item_list: with_item
   95               | with_item_list ',' with_item

   96 with_item: expr delay_opt "WHEN" with_value_list

   97 process_decl_list: %empty
   98                  | process_decl_list process_decl

   99 process_decl: "VARIABLE" s_list ':' type ';'
  100             | "VARIABLE" s_list ':' type ':' '=' expr ';'

  101 process_body: %empty
  102             | process_body process_item

  103 process_item: signal ':' '=' expr ';'
  104             | signal '<' '=' sigvalue
  105             | "IF" conditional_expr "THEN" process_body elsepart "END" "IF" ';'
  106             | "FOR" signal "IN" expr "TO" expr "LOOP" process_body "END" "LOOP" ';'
  107             | "FOR" signal "IN" expr "DOWNTO" expr "LOOP" process_body "END" "LOOP" ';'
  108             | "CASE" expr "IS" cases "END" "CASE" ';'
  109             | "EXIT" ';'
  110             | "NULL" ';'

  111 elsepart: %empty
  112         | "ELSIF" conditional_expr "THEN" process_body elsepart
  113         | "ELSE" process_body

  114 cases: "WHEN" with_value_list '=' '>' process_body cases
  115      | "WHEN" "OTHERS" '=' '>' process_body

  116 with_value_list: with_value
  117                | with_value_list '|' with_value

  118 with_value: TOK_STRING
  119           | name

  120 signal_list: signal
  121            | signal_list ',' signal

  122 sigvalue: expr delay_opt ';'
  123         | expr delay_opt "WHEN" conditional_expr ';'
  124         | expr delay_opt "WHEN" conditional_expr "ELSE" sigvalue

  125 delay_opt: %empty
  126          | "AFTER" TOK_NATURAL name

  127 map_list: map_item
  128         | map_item ',' map_list

  129 map_item: signal
  130         | name '=' '>' signal

  131 generic_map_list: generic_map_item
  132                 | generic_map_item ',' generic_map_list

  133 generic_map_item: name '=' '>' expr

  134 signal: name
  135       | name '(' expr updown expr ')'
  136       | name '(' name '\'' "RANGE" ')'

  137 choice: "OTHERS"

  138 choices: choice
  139        | choices '|' choice

  140 element_association: choices '=' '>' expr

  141 element_association_list: element_association
  142                         | element_association_list ',' element_association

  143 expr: signal
  144     | TOK_STRING
  145     | TOK_BIT_STRING
  146     | TOK_CHAR
  147     | TOK_NATURAL
  148     | TOK_NATURAL TOK_BASED_INTEGER
  149     | '(' element_association_list ')'
  150     | expr '&' expr
  151     | '-' expr
  152     | '+' expr
  153     | expr '+' expr
  154     | expr '-' expr
  155     | expr '*' expr
  156     | expr '/' expr
  157     | expr "MOD" expr
  158     | "NOT" expr
  159     | expr "AND" expr
  160     | expr "OR" expr
  161     | expr "XOR" expr
  162     | name '(' expr_list ')'
  163     | '(' expr ')'

  164 expr_list: expr
  165          | expr_list ',' expr

  166 conditional_expr: comparison
  167                 | '(' conditional_expr ')'
  168                 | conditional_expr "AND" conditional_expr
  169                 | conditional_expr "OR" conditional_expr
  170                 | "NOT" conditional_expr

  171 comparison: expr '=' expr
  172           | expr '>' expr
  173           | expr '>' '=' expr
  174           | expr '<' expr
  175           | expr '<' '=' expr
  176           | expr '/' '=' expr


Terminals, with rules where they appear

$end (0) 0
'&' (38) 150
'\'' (39) 40 41 59 136
'(' (40) 27 28 38 39 40 41 43 45 59 72 73 74 81 82 83 135 136 149 162
    163 167
')' (41) 27 28 38 39 40 41 43 45 59 72 73 74 81 82 83 135 136 149 162
    163 167
'*' (42) 155
'+' (43) 152 153
',' (44) 11 57 62 76 92 95 121 128 132 142 165
'-' (45) 151 154
'.' (46) 14 15
'/' (47) 156 176
':' (58) 31 32 35 53 70 71 81 82 90 99 100 103
';' (59) 9 16 21 25 27 28 30 34 53 67 70 71 72 73 74 80 81 82 83 84
    85 86 99 100 103 105 106 107 108 109 110 122 123
'<' (60) 79 80 104 174 175
'=' (61) 31 71 79 80 100 103 104 114 115 130 133 140 171 173 175 176
'>' (62) 114 115 130 133 140 172 173
'|' (124) 117 139
error (256)
ORL (258)
ANDL (259)
"OR" (260) 160 169
"XOR" (261) 161
"AND" (262) 159 168
"MOD" (263) 157
BIGEQ (264)
LESSEQ (265)
NOTEQ (266)
EQUAL (267)
UMINUS (268)
UPLUS (269)
NOTL (270)
"NOT" (271) 158 170
"ABS" (272)
"ACCESS" (273) 47
"AFTER" (274) 126
"ALIAS" (275)
"ALL" (276) 15
"ARCHITECTURE" (277) 67
"ARRAY" (278) 45
"ASSERT" (279)
"ATTRIBUTE" (280)
"BEGIN" (281) 67 83
"BLOCK" (282)
"BODY" (283) 25
"BUFFER" (284)
"BUS" (285)
"CASE" (286) 108
"COMPONENT" (287) 73 74
"CONFIGURATION" (288)
"CONSTANT" (289) 71
"DISCONNENT" (290)
"DOWNTO" (291) 65 86 107
"ELSE" (292) 113 124
"ELSIF" (293) 112
"END" (294) 21 25 27 28 46 50 67 73 74 83 84 85 86 105 106 107 108
"ENTITY" (295) 27 28
"EXIT" (296) 109
"FILE" (297) 49
"FOR" (298) 85 86 106 107
"FUNCTION" (299)
"GENERATE" (300) 84 85 86
"GENERIC" (301) 28 74 82
"GROUP" (302)
"GUARDED" (303)
"IF" (304) 84 105
"IMPURE" (305)
"IN" (306) 36 85 86 106 107
"INERTIAL" (307)
"INOUT" (308)
"IS" (309) 21 25 27 28 67 72 108
"LABEL" (310)
"LIBRARY" (311) 16
"LINKAGE" (312)
"LITERAL" (313)
"LOOP" (314) 106 107
"MAP" (315) 81 82
"NAND" (316)
"NEW" (317)
"NEXT" (318)
"NOR" (319)
"NULL" (320) 110
"OF" (321) 45 49 67
"ON" (322)
"OPEN" (323)
"OTHERS" (324) 92 93 115 137
"OUT" (325) 37
"PACKAGE" (326) 21 25
"PORT" (327) 27 28 73 74 81 82
"POSTPONED" (328)
"PROCEDURE" (329)
"PROCESS" (330) 83
"PROTECTED" (331) 50
"PURE" (332)
"RANGE" (333) 40 44 59 136
"RECORD" (334) 46
"REGISTER" (335)
"REJECT" (336)
"REM" (337)
"REPORT" (338)
"RETURN" (339)
"ROL" (340)
"ROR" (341)
"SELECT" (342) 80
"SEVERITY" (343)
"SIGNAL" (344) 70
"SLA" (345)
"SLL" (346)
"SRA" (347)
"SRL" (348)
"SUBTYPE" (349)
"THEN" (350) 105 112
"TO" (351) 66 85 106
"TRANSPORT" (352)
"TYPE" (353) 48 72
"UNAFFECTED" (354)
"UNITS" (355)
"UNTIL" (356)
"USE" (357) 9
"VARIABLE" (358) 99 100
"WAIT" (359)
"WHEN" (360) 92 93 96 114 115 123 124
"WHILE" (361)
"WITH" (362) 80
"XNOR" (363)
TOK_NATURAL (364) 126 147 148
TOK_BASED_INTEGER (365) 148
TOK_STRING (366) 118 144
TOK_BIT_STRING (367) 145
TOK_CHAR (368) 64 146
TOK_IDENTIFIER (369) 12 14 41 48 54 55 63


Nonterminals, with rules where they appear

$accept (131)
    on left: 0
design_file (132)
    on left: 1 2, on right: 0 2
design_unit (133)
    on left: 3 4, on right: 2
context_clause (134)
    on left: 5 6, on right: 3 6
context_item (135)
    on left: 7 8, on right: 5 6
use_clause (136)
    on left: 9, on right: 8
name_list (137)
    on left: 10 11, on right: 9 11 16
name (138)
    on left: 12 13, on right: 10 11 14 15 21 25 27 28 38 39 40 41 42
    58 59 67 71 72 73 74 75 76 81 82 88 90 119 126 130 133 134 135
    136 162
selected_name (139)
    on left: 14 15, on right: 13
library_clause (140)
    on left: 16, on right: 7
library_unit (141)
    on left: 17 18, on right: 3 4
primary_unit (142)
    on left: 19 20, on right: 17
package_declaration (143)
    on left: 21, on right: 20
package_declarative_part (144)
    on left: 22, on right: 21
secondary_unit (145)
    on left: 23 24, on right: 18
package (146)
    on left: 25, on right: 24
package_body_declarative_part (147)
    on left: 26, on right: 25
entity_declaration (148)
    on left: 27 28, on right: 19
generic_list (149)
    on left: 29 30, on right: 28 30 74
generic (150)
    on left: 31 32, on right: 29 30
port_list (151)
    on left: 33 34, on right: 27 28 34 73 74
port (152)
    on left: 35, on right: 33 34
dir (153)
    on left: 36 37, on right: 35
type (154)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50, on right: 31 32
    35 45 47 49 53 70 71 99 100
element_declaration_list (155)
    on left: 51 52, on right: 46 52
element_declaration (156)
    on left: 53, on right: 51 52
identifier_list (157)
    on left: 54 55, on right: 53 55
index_constraint_list (158)
    on left: 56 57, on right: 45 57
index_constraint (159)
    on left: 58 59 60, on right: 56 57
enumeration_literal_list (160)
    on left: 61 62, on right: 43 62
enumeration_literal (161)
    on left: 63 64, on right: 61 62
updown (162)
    on left: 65 66, on right: 38 44 60 135
architecture (163)
    on left: 67, on right: 23
architecture_decl_list (164)
    on left: 68 69, on right: 67 69
architecture_decl (165)
    on left: 70 71 72 73 74, on right: 69
s_list (166)
    on left: 75 76, on right: 31 32 35 70 72 76 99 100
architecture_body (167)
    on left: 77 78, on right: 67 78 84 85 86
architecture_item (168)
    on left: 79 80 81 82 83 84 85 86, on right: 78
name_opt (169)
    on left: 87 88, on right: 27 28 46 67 83 84 85 86
label_opt (170)
    on left: 89 90, on right: 83 84 85 86
with_list (171)
    on left: 91 92 93, on right: 80
with_item_list (172)
    on left: 94 95, on right: 91 92 95
with_item (173)
    on left: 96, on right: 94 95
process_decl_list (174)
    on left: 97 98, on right: 83 98
process_decl (175)
    on left: 99 100, on right: 98
process_body (176)
    on left: 101 102, on right: 83 102 105 106 107 112 113 114 115
process_item (177)
    on left: 103 104 105 106 107 108 109 110, on right: 102
elsepart (178)
    on left: 111 112 113, on right: 105 112
cases (179)
    on left: 114 115, on right: 108 114
with_value_list (180)
    on left: 116 117, on right: 96 114 117
with_value (181)
    on left: 118 119, on right: 116 117
signal_list (182)
    on left: 120 121, on right: 83 121
sigvalue (183)
    on left: 122 123 124, on right: 79 104 124
delay_opt (184)
    on left: 125 126, on right: 92 93 96 122 123 124
map_list (185)
    on left: 127 128, on right: 81 82 128
map_item (186)
    on left: 129 130, on right: 127 128
generic_map_list (187)
    on left: 131 132, on right: 82 132
generic_map_item (188)
    on left: 133, on right: 131 132
signal (189)
    on left: 134 135 136, on right: 79 80 85 86 103 104 106 107 120
    121 129 130 143
choice (190)
    on left: 137, on right: 138 139
choices (191)
    on left: 138 139, on right: 139 140
element_association (192)
    on left: 140, on right: 141 142
element_association_list (193)
    on left: 141 142, on right: 142 149
expr (194)
    on left: 143 144 145 146 147 148 149 150 151 152 153 154 155 156
    157 158 159 160 161 162 163, on right: 31 38 39 44 60 71 80 85
    86 92 93 96 100 103 106 107 108 122 123 124 133 135 140 150 151
    152 153 154 155 156 157 158 159 160 161 163 164 165 171 172 173
    174 175 176
expr_list (195)
    on left: 164 165, on right: 162 165
conditional_expr (196)
    on left: 166 167 168 169 170, on right: 84 105 112 123 124 167
    168 169 170
comparison (197)
    on left: 171 172 173 174 175 176, on right: 166


State 0

    0 $accept: . design_file $end

    $default  reduce using rule 1 (design_file)

    design_file  go to state 1


State 1

    0 $accept: design_file . $end
    2 design_file: design_file . design_unit

    $end            shift, and go to state 2
    "ARCHITECTURE"  shift, and go to state 3
    "ENTITY"        shift, and go to state 4
    "LIBRARY"       shift, and go to state 5
    "PACKAGE"       shift, and go to state 6
    "USE"           shift, and go to state 7

    design_unit          go to state 8
    context_clause       go to state 9
    context_item         go to state 10
    use_clause           go to state 11
    library_clause       go to state 12
    library_unit         go to state 13
    primary_unit         go to state 14
    package_declaration  go to state 15
    secondary_unit       go to state 16
    package              go to state 17
    entity_declaration   go to state 18
    architecture         go to state 19


State 2

    0 $accept: design_file $end .

    $default  accept


State 3

   67 architecture: "ARCHITECTURE" . name "OF" name "IS" architecture_decl_list "BEGIN" architecture_body "END" name_opt ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 21
    selected_name  go to state 22


State 4

   27 entity_declaration: "ENTITY" . name "IS" "PORT" '(' port_list ')' ';' "END" name_opt ';'
   28                   | "ENTITY" . name "IS" "GENERIC" '(' generic_list ')' ';' "PORT" '(' port_list ')' ';' "END" name_opt ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 23
    selected_name  go to state 22


State 5

   16 library_clause: "LIBRARY" . name_list ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name_list      go to state 24
    name           go to state 25
    selected_name  go to state 22


State 6

   21 package_declaration: "PACKAGE" . name "IS" package_declarative_part "END" ';'
   25 package: "PACKAGE" . "BODY" name "IS" package_body_declarative_part "END" ';'

    "BODY"          shift, and go to state 26
    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 27
    selected_name  go to state 22


State 7

    9 use_clause: "USE" . name_list ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name_list      go to state 28
    name           go to state 25
    selected_name  go to state 22


State 8

    2 design_file: design_file design_unit .

    $default  reduce using rule 2 (design_file)


State 9

    3 design_unit: context_clause . library_unit
    6 context_clause: context_clause . context_item

    "ARCHITECTURE"  shift, and go to state 3
    "ENTITY"        shift, and go to state 4
    "LIBRARY"       shift, and go to state 5
    "PACKAGE"       shift, and go to state 6
    "USE"           shift, and go to state 7

    context_item         go to state 29
    use_clause           go to state 11
    library_clause       go to state 12
    library_unit         go to state 30
    primary_unit         go to state 14
    package_declaration  go to state 15
    secondary_unit       go to state 16
    package              go to state 17
    entity_declaration   go to state 18
    architecture         go to state 19


State 10

    5 context_clause: context_item .

    $default  reduce using rule 5 (context_clause)


State 11

    8 context_item: use_clause .

    $default  reduce using rule 8 (context_item)


State 12

    7 context_item: library_clause .

    $default  reduce using rule 7 (context_item)


State 13

    4 design_unit: library_unit .

    $default  reduce using rule 4 (design_unit)


State 14

   17 library_unit: primary_unit .

    $default  reduce using rule 17 (library_unit)


State 15

   20 primary_unit: package_declaration .

    $default  reduce using rule 20 (primary_unit)


State 16

   18 library_unit: secondary_unit .

    $default  reduce using rule 18 (library_unit)


State 17

   24 secondary_unit: package .

    $default  reduce using rule 24 (secondary_unit)


State 18

   19 primary_unit: entity_declaration .

    $default  reduce using rule 19 (primary_unit)


State 19

   23 secondary_unit: architecture .

    $default  reduce using rule 23 (secondary_unit)


State 20

   12 name: TOK_IDENTIFIER .

    $default  reduce using rule 12 (name)


State 21

   14 selected_name: name . '.' TOK_IDENTIFIER
   15              | name . '.' "ALL"
   67 architecture: "ARCHITECTURE" name . "OF" name "IS" architecture_decl_list "BEGIN" architecture_body "END" name_opt ';'

    "OF"  shift, and go to state 31
    '.'   shift, and go to state 32


State 22

   13 name: selected_name .

    $default  reduce using rule 13 (name)


State 23

   14 selected_name: name . '.' TOK_IDENTIFIER
   15              | name . '.' "ALL"
   27 entity_declaration: "ENTITY" name . "IS" "PORT" '(' port_list ')' ';' "END" name_opt ';'
   28                   | "ENTITY" name . "IS" "GENERIC" '(' generic_list ')' ';' "PORT" '(' port_list ')' ';' "END" name_opt ';'

    "IS"  shift, and go to state 33
    '.'   shift, and go to state 32


State 24

   11 name_list: name_list . ',' name
   16 library_clause: "LIBRARY" name_list . ';'

    ';'  shift, and go to state 34
    ','  shift, and go to state 35


State 25

   10 name_list: name .
   14 selected_name: name . '.' TOK_IDENTIFIER
   15              | name . '.' "ALL"

    '.'  shift, and go to state 32

    $default  reduce using rule 10 (name_list)


State 26

   25 package: "PACKAGE" "BODY" . name "IS" package_body_declarative_part "END" ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 36
    selected_name  go to state 22


State 27

   14 selected_name: name . '.' TOK_IDENTIFIER
   15              | name . '.' "ALL"
   21 package_declaration: "PACKAGE" name . "IS" package_declarative_part "END" ';'

    "IS"  shift, and go to state 37
    '.'   shift, and go to state 32


State 28

    9 use_clause: "USE" name_list . ';'
   11 name_list: name_list . ',' name

    ';'  shift, and go to state 38
    ','  shift, and go to state 35


State 29

    6 context_clause: context_clause context_item .

    $default  reduce using rule 6 (context_clause)


State 30

    3 design_unit: context_clause library_unit .

    $default  reduce using rule 3 (design_unit)


State 31

   67 architecture: "ARCHITECTURE" name "OF" . name "IS" architecture_decl_list "BEGIN" architecture_body "END" name_opt ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 39
    selected_name  go to state 22


State 32

   14 selected_name: name '.' . TOK_IDENTIFIER
   15              | name '.' . "ALL"

    "ALL"           shift, and go to state 40
    TOK_IDENTIFIER  shift, and go to state 41


State 33

   27 entity_declaration: "ENTITY" name "IS" . "PORT" '(' port_list ')' ';' "END" name_opt ';'
   28                   | "ENTITY" name "IS" . "GENERIC" '(' generic_list ')' ';' "PORT" '(' port_list ')' ';' "END" name_opt ';'

    "GENERIC"  shift, and go to state 42
    "PORT"     shift, and go to state 43


State 34

   16 library_clause: "LIBRARY" name_list ';' .

    $default  reduce using rule 16 (library_clause)


State 35

   11 name_list: name_list ',' . name

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 44
    selected_name  go to state 22


State 36

   14 selected_name: name . '.' TOK_IDENTIFIER
   15              | name . '.' "ALL"
   25 package: "PACKAGE" "BODY" name . "IS" package_body_declarative_part "END" ';'

    "IS"  shift, and go to state 45
    '.'   shift, and go to state 32


State 37

   21 package_declaration: "PACKAGE" name "IS" . package_declarative_part "END" ';'

    $default  reduce using rule 22 (package_declarative_part)

    package_declarative_part  go to state 46


State 38

    9 use_clause: "USE" name_list ';' .

    $default  reduce using rule 9 (use_clause)


State 39

   14 selected_name: name . '.' TOK_IDENTIFIER
   15              | name . '.' "ALL"
   67 architecture: "ARCHITECTURE" name "OF" name . "IS" architecture_decl_list "BEGIN" architecture_body "END" name_opt ';'

    "IS"  shift, and go to state 47
    '.'   shift, and go to state 32


State 40

   15 selected_name: name '.' "ALL" .

    $default  reduce using rule 15 (selected_name)


State 41

   14 selected_name: name '.' TOK_IDENTIFIER .

    $default  reduce using rule 14 (selected_name)


State 42

   28 entity_declaration: "ENTITY" name "IS" "GENERIC" . '(' generic_list ')' ';' "PORT" '(' port_list ')' ';' "END" name_opt ';'

    '('  shift, and go to state 48


State 43

   27 entity_declaration: "ENTITY" name "IS" "PORT" . '(' port_list ')' ';' "END" name_opt ';'

    '('  shift, and go to state 49


State 44

   11 name_list: name_list ',' name .
   14 selected_name: name . '.' TOK_IDENTIFIER
   15              | name . '.' "ALL"

    '.'  shift, and go to state 32

    $default  reduce using rule 11 (name_list)


State 45

   25 package: "PACKAGE" "BODY" name "IS" . package_body_declarative_part "END" ';'

    $default  reduce using rule 26 (package_body_declarative_part)

    package_body_declarative_part  go to state 50


State 46

   21 package_declaration: "PACKAGE" name "IS" package_declarative_part . "END" ';'

    "END"  shift, and go to state 51


State 47

   67 architecture: "ARCHITECTURE" name "OF" name "IS" . architecture_decl_list "BEGIN" architecture_body "END" name_opt ';'

    $default  reduce using rule 68 (architecture_decl_list)

    architecture_decl_list  go to state 52


State 48

   28 entity_declaration: "ENTITY" name "IS" "GENERIC" '(' . generic_list ')' ';' "PORT" '(' port_list ')' ';' "END" name_opt ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 53
    selected_name  go to state 22
    generic_list   go to state 54
    generic        go to state 55
    s_list         go to state 56


State 49

   27 entity_declaration: "ENTITY" name "IS" "PORT" '(' . port_list ')' ';' "END" name_opt ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 53
    selected_name  go to state 22
    port_list      go to state 57
    port           go to state 58
    s_list         go to state 59


State 50

   25 package: "PACKAGE" "BODY" name "IS" package_body_declarative_part . "END" ';'

    "END"  shift, and go to state 60


State 51

   21 package_declaration: "PACKAGE" name "IS" package_declarative_part "END" . ';'

    ';'  shift, and go to state 61


State 52

   67 architecture: "ARCHITECTURE" name "OF" name "IS" architecture_decl_list . "BEGIN" architecture_body "END" name_opt ';'
   69 architecture_decl_list: architecture_decl_list . architecture_decl

    "BEGIN"      shift, and go to state 62
    "COMPONENT"  shift, and go to state 63
    "CONSTANT"   shift, and go to state 64
    "SIGNAL"     shift, and go to state 65
    "TYPE"       shift, and go to state 66

    architecture_decl  go to state 67


State 53

   14 selected_name: name . '.' TOK_IDENTIFIER
   15              | name . '.' "ALL"
   75 s_list: name .

    '.'  shift, and go to state 32

    $default  reduce using rule 75 (s_list)


State 54

   28 entity_declaration: "ENTITY" name "IS" "GENERIC" '(' generic_list . ')' ';' "PORT" '(' port_list ')' ';' "END" name_opt ';'
   30 generic_list: generic_list . ';' generic

    ';'  shift, and go to state 68
    ')'  shift, and go to state 69


State 55

   29 generic_list: generic .

    $default  reduce using rule 29 (generic_list)


State 56

   31 generic: s_list . ':' type ':' '=' expr
   32        | s_list . ':' type
   76 s_list: s_list . ',' name

    ','  shift, and go to state 70
    ':'  shift, and go to state 71


State 57

   27 entity_declaration: "ENTITY" name "IS" "PORT" '(' port_list . ')' ';' "END" name_opt ';'
   34 port_list: port_list . ';' port

    ';'  shift, and go to state 72
    ')'  shift, and go to state 73


State 58

   33 port_list: port .

    $default  reduce using rule 33 (port_list)


State 59

   35 port: s_list . ':' dir type
   76 s_list: s_list . ',' name

    ','  shift, and go to state 70
    ':'  shift, and go to state 74


State 60

   25 package: "PACKAGE" "BODY" name "IS" package_body_declarative_part "END" . ';'

    ';'  shift, and go to state 75


State 61

   21 package_declaration: "PACKAGE" name "IS" package_declarative_part "END" ';' .

    $default  reduce using rule 21 (package_declaration)


State 62

   67 architecture: "ARCHITECTURE" name "OF" name "IS" architecture_decl_list "BEGIN" . architecture_body "END" name_opt ';'

    $default  reduce using rule 77 (architecture_body)

    architecture_body  go to state 76


State 63

   73 architecture_decl: "COMPONENT" . name "PORT" '(' port_list ')' ';' "END" "COMPONENT" ';'
   74                  | "COMPONENT" . name "GENERIC" '(' generic_list ')' ';' "PORT" '(' port_list ')' ';' "END" "COMPONENT" ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 77
    selected_name  go to state 22


State 64

   71 architecture_decl: "CONSTANT" . name ':' type ':' '=' expr ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 78
    selected_name  go to state 22


State 65

   70 architecture_decl: "SIGNAL" . s_list ':' type ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 53
    selected_name  go to state 22
    s_list         go to state 79


State 66

   72 architecture_decl: "TYPE" . name "IS" '(' s_list ')' ';'

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 80
    selected_name  go to state 22


State 67

   69 architecture_decl_list: architecture_decl_list architecture_decl .

    $default  reduce using rule 69 (architecture_decl_list)


State 68

   30 generic_list: generic_list ';' . generic

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 53
    selected_name  go to state 22
    generic        go to state 81
    s_list         go to state 56


State 69

   28 entity_declaration: "ENTITY" name "IS" "GENERIC" '(' generic_list ')' . ';' "PORT" '(' port_list ')' ';' "END" name_opt ';'

    ';'  shift, and go to state 82


State 70

   76 s_list: s_list ',' . name

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 83
    selected_name  go to state 22


State 71

   31 generic: s_list ':' . type ':' '=' expr
   32        | s_list ':' . type

    "ACCESS"        shift, and go to state 84
    "ARRAY"         shift, and go to state 85
    "FILE"          shift, and go to state 86
    "PROTECTED"     shift, and go to state 87
    "RANGE"         shift, and go to state 88
    "RECORD"        shift, and go to state 89
    "TYPE"          shift, and go to state 90
    TOK_IDENTIFIER  shift, and go to state 20
    '('             shift, and go to state 91

    name           go to state 92
    selected_name  go to state 22
    type           go to state 93


State 72

   34 port_list: port_list ';' . port

    TOK_IDENTIFIER  shift, and go to state 20

    name           go to state 53
    selected_name  go to state 22
    port           go to state 94
    s_list         go to state 59


State 73

   27 entity_declaration: "ENTITY" name "IS" "PORT" '(' port_list ')' . ';' "END" name_opt ';'

    ';'  shift, and go to state 95


State 74

   35 port: s_list ':' . dir type

    "IN"   shift, and go to state 96
    "OUT"  shift, and go to state 97

    dir  go to state 98


State 75

   25 package: "PACKAGE" "BODY" name "IS" package_body_declarative_part "END" ';' .

    $default  reduce using rule 25 (package)


State 76

   67 architecture: "ARCHITECTURE" name "OF" name "IS" architecture_decl_list "BEGIN" architecture_body . "END" name_opt ';'
   78 architecture_body: architecture_body . architecture_item

    "END"           shift, and go to state 99
    "WITH"          shift, and go to state 100
    TOK_IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 89 (label_opt)

    name               go to state 101
    selected_name      go to state 22
    architecture_item  go to state 102
    label_opt          go to state 103
    signal             go to state 104


State 77
